# PyMusic

./: .dockerignore  .drone.yml  .env.template  .gitignore  Dockerfile  Pipfile  app.py  cli.py  dash_app.py  docker-compose.yml  docstring-template.mustache  main.py  mb.py  pyproject.toml  pyrightconfig.json  pytest.ini  readme.md  requirements.dev.txt  requirements.txt  server.py  start.sh  test.ipynb  tox.ini
.github/workflows/: build.yml  python-app.yml
app/: __init__.py  app.py  colors.py  data_callbacks.py  exceptions.py  middleware.py  oath2.py  server.py  settings.py  settings.py.template  utils.py
app/assets/: _bootstrap.scss  _mixins.scss  style.css  style.scss
app/components/: listening_clock_chart.py  navbar.py  plays_over_time_chart.py  stats.py  tag_timeline_chart.py  title_bar.py  titlebar.py  top_chart.py  top_image.py  top_image_chart.py  vocal_chart.py
app/dash/: app.py  data_callbacks.py  utils.py
app/db/: __init__.py  base.py  models.py
app/logic/: album.py  artist.py  scrobble.py  song.py  tag.py  user.py  user_logic.py
app/models/: artists.py  songs.py  tags.py  users.py
app/pages/: __init__.py  listening_report.py
app/routers/: me.py  user.py  user_controller.py
app/stores/: __init__.py  top_stores.py
app/utils/: clean.py  lastfm.py  security.py
cli/: mb.py  musicbeeipc_mock.py  scrobbles.py  songs.py
cli/musicbeeipc/: __init__.py  musicbeeipc.py  pack.py  unpack.py
musicbeeipc/: musicbeeipc.py
scripts/: mb.py  scrobbles.py
shared/: exceptions.py  settings.py
shared/db/: __init__.py  base.py  (+1 more)
tests/: utils.py
(+73 files in other folders)
